# rocs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.md  README  README.md  configure.sh  make.sh
cmake/: BasicMacros.cmake  CMakeLists.txt  FindOpenCV.cmake  FindOpenCVPkgConfig.cmake  FindROCS.cmake  ROCSBuildOpts.cmake  ROCSDeps.cmake  ROCSExtDeps.cmake  ROCSMacros.cmake
config/: CMakeLists.txt
config/test/: debug_settings_out.xml  include1.xml  test.info  test.ini  test.json  test.xml  test_broken.xml  test_broken2.xml  test_include1.info  test_include1.ini  test_include1.json  test_include1.xml  test_include2.info  test_include2.json  test_include2.xml  test_include3.info  test_include3.json  test_include3.xml
config/test_old/: debug_settings.xml  include2.xml  include3.xml  john.json
data/: CMakeLists.txt
data/concept/: test_loadgraphinfo.xml
data/images/: Coffee_nb.ppm  Coffee_nb_Lxx(8,28).crfh  box.ppm  box_Lxx(8,28).crfh
data/samples/: README.md
data/samples/COLD/freiburg/seq1_cloudy1/localization/: places.lst
data/samples/COLD/freiburg/seq2_cloudy1/localization/: places.lst
data/samples/COLD/freiburg/seq3_cloudy1/localization/: places.lst
data/samples/COLD/ljubljana/seq1_cloudy1/localization/: places.lst
data/samples/COLD/ljubljana/seq2_cloudy1/localization/: places.lst
data/samples/COLD/saarbruecken/seq1_cloudy1/localization/: places.lst
data/samples/COLD/saarbruecken/seq2_cloudy1/localization/: places.lst
data/samples/COLD/saarbruecken/seq3_cloudy1/localization/: places.lst
data/samples/COLD/saarbruecken/seq4_cloudy1/localization/: places.lst
data/samples/ConceptualGraph/sample1/: conceptual.fg  conceptual.info
data/samples/ConceptualGraph/sample2/: conceptual.fg  conceptual.info
data/samples/VPC/Home1/: label.txt
data/samples/VPC/Home2/: label.txt
data/samples/VPC/Home3/: label.txt
data/samples/VPC/Home4/: label.txt
data/samples/VPC/Home5/: label.txt
data/samples/VPC/Home6/: label.txt
data/scenes/: scene.xml
doc/: CHANGELOG.md  CMakeLists.txt  Doxyfile.in  Doxyfile_cpp.in  Doxyfile_java.in  Doxyfile_python.in  INSTALL.md
doc/dox/: installation.dox  main.dox  modules.dox  useapps.dox  usecode.dox
src/Core/: CMakeLists.txt
src/Core/cpp/Core/: CommandLineHelp.cc  ConfigFileReader.cc  Core.h  Error.h  InputMixer.cc  InputMixer.h  Types.h
src/concept/: CMakeLists.txt
src/concept/cpp/apps/: evaluate_scene.cc
src/concept/cpp/rocs/: concept.h
src/concept/cpp/rocs/concept/: AxiomFactorClassGenerator.cc  AxiomFactorClassGenerator.h  Graph-internal.h  Graph.cc  Graph.h  ObjectRelationGraphGenerator.cc  ObjectRelationGraphGenerator.h  Query.cc  Query.h
src/concept/cpp/tests/: test_graph.cc  test_graph_information_loading.cc  test_query.cc
src/core/: CMakeLists.txt
src/core/cpp/Core/: ConfigFileReader.h  Core.cc
src/core/cpp/rocs/: core.h
src/core/cpp/rocs/core/: CommandLineHelp.cc  CommandLineHelp.h  Config.cc  Config.h  ConfigFileReader.cc  ConfigFileReader.h  Configuration.cc  Configuration.h  Core.h  Debug.h  Error.h  FileInfo.cc  FileInfo.h  InputMixer.cc  InputMixer.h  ShallowCopyable.h  Timer.h  Types.h  Utils.h  debug.h  error.h  types.h  utils.h
src/core/cpp/rocs/core/obsolete/: types.h  utils.h
src/core/cpp/tests/: test1.cc  test1.cpp  test_config.cc  test_configuration.cc  test_test.cc  test_test1.cc  tests_boost_property_tree.cc  tests_command_line_help.cc  tests_config_files.cc  tests_debug_messages.cc  tests_input_mixer.cc
src/core/dox/: Core.dox  configFile.dox  core.dox
src/cv/: CMakeLists.txt
src/cv/cpp/rocs/cv/: Feature.cc  Feature.h  FeatureExtractor.cc  FeatureExtractor.h  FeatureList.cc  FeatureList.h  ImageIO.cc  ImageIO.h  Img.cc  Img.h
src/cv/cpp/rocs/cv/Crfh/: CChannelCache.cc  CChannelCache.h  CCrfh.cc  CCrfh.h  CDescriptor.cc  CDescriptor.h  CDescriptorList.cc  CDescriptorList.h  CFilter.cc  CFilter.h  CFilterCache.cc  CFilterCache.h  CScaleSpaceCache.cc  CScaleSpaceCache.h  CSystem.cc  CSystem.h  ChannelCache.cc  ChannelCache.h  Crfh.cc  Crfh.h  CrfhInterface.cc  CrfhInterface.h  DescriptorList.cc  Filter.cc  Filter.h  FilterCache.h  ScaleSpaceCache.cc  ScaleSpaceCache.h  System.cc  System.h
src/cv/cpp/rocs/cv/Surf/: SurfExtractor.cc  SurfExtractor.h
src/cv/cpp/tests/: test_crfh.cc  test_imageIo.cc  test_test1.cc
src/cv/dox/: cv.dox
src/data/: CMakeLists.txt
src/data/python/: test.py  view-conceptual-map.py
src/data/python/rocs/data/: Sequence.py  conceptual.py
src/data/python/rocs/data/databases/: COLD.py  ConceptualGraph.py  VPC.py
src/math/: CMakeLists.txt
src/math/cpp/rocs/: math.h
src/math/cpp/rocs/math/: ElemMath.cc  ElemMath.h  Matrix.cc  Matrix.h  Matrix_.cc  Matrix_.h  SparseMatrix.cc  SparseMatrix.h  Vector.cc  Vector.h  Vector_.cc  Vector_.h
src/math/cpp/rocs/math/obsolete/: ElemMath.h  Matrix.h  Matrix_.h  Vector.cc  Vector.h
src/math/dox/: math.dox
src/ml/: CMakeLists.txt
src/ml/cpp/rocs/: ml.h
src/ml/cpp/rocs/ml/: ChainGraph.cc  ChainGraph.h  DaiBpFactorGraphSolver.cc  DaiBpFactorGraphSolver.h  Factor.cc  Factor.h  FactorClass.cc  FactorClass.h  FactorClassSet.cc  FactorClassSet.h  FactorGraph.cc  FactorGraph.h  FactorGraphSolver.cc  FactorGraphSolver.h  Variable.cc  Variable.h  VariableClass.cc  VariableClass.h  VariableClassSet.cc  VariableClassSet.h
src/ml/cpp/tests/: test_test1.cc
src/ml/dox/: ml.dox
src/vision/: CMakeLists.txt
src/vision/cpp/rocs/vision/: FeatureExtractor.cc  FeatureList.h  ImageIO.h  Img.h
src/vision/cpp/rocs/vision/Crfh/: Crfh.h  CrfhIncludes.h  CrfhInterface.cc  CrfhInterface.h  Descriptor.cc  Descriptor.h  DescriptorList.h  FilterCache.cc  ScaleSpaceCache.cc  System.cc
src/vision/cpp/rocs/vision/Surf/: SurfExtractor.cc  SurfExtractor.h
src/vision/cpp/tests/: test_crfh.cc  test_imageIo.cc
